# ICS0019

./: README.md
week_1/: tkinterExample.py
week_1/class_work/testingExmple/Testing/: test_func.py  test_sum.py  test_sum2.py  test_sum3.py
week_1/homework_1/: cmd_interface.py  errors.py  gui_interface.py  sandbox.py  test_squared.py
week_1/homework_1/package/: README.md  pyproject.toml
week_1/homework_1/package/src/square_matlin/: nums_squared.py  test_squared.py
week_1/package_creation_example/: README.md  pyproject.toml
week_1/testingExmple/: calculator.py  using_func.py
week_1/testingExmple/Testing/: test_func.py  test_sum.py  test_sum2.py  test_sum3.py
week_2/: test_db
week_2/homework_2/: readme.md
week_2/homework_2/SQLAlchemy/: SQLAlchemy_create.py  SQLAlchemy_query.py
week_2/homework_2/plain_SQL/: db_create.py  db_queries.py
week_3/homework_3/: TallinnFlights.py  sandbox.py
week_3/homework_3/generated_data/: output.csv
week_3/homework_3/initial_data/: otselennud23.csv
week_4/homework_4/: BeautifulSoupSpider.py  ScrapySpider.py  readme.md
week_4/homework_4/output/: scrapy.json  soup.json
