[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ex_package_matlin"
version = "0.0.1"
authors = [
  { name="Matthias Linder", email="author@example.com" },
]
description = "A package to increase a number by 1."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"