[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "square_matlin"
version = "0.0.2"
authors = [
  { name="Matthias Linder", email="author@example.com" },
]
description = "A package to add two numbers together and then take their square root.."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"